# hkanren

./: BenchmarkLVars.hs  LICENSE  README.markdown  ds-kanren.cabal  hkanren.cabal
src/Control/: Nondet.hs
src/Control/Monad/: AbstractLogic.hs  ContNondet.hs  InterleavingLogic.hs  SFK.hs
src/Data/: Bounded.hs  DiffList.hs  HMap.hs  HOrdering.hs  HUtils.hs  Levels.hs  MMap.hs
src/Language/: DSKanren.hs  HKanren.hs
src/Language/DSKanren/: Core.hs  Playground.hs  Subst.hs  Sugar.hs
src/Language/HKanren/: Core.hs  IntLVar.hs  IntegerLVar.hs  LVar.hs  Nondeterminism.hs  Playground.hs  SafeLVar.hs  SingletonsPlayground.hs  Subst.hs  Syntax.hs  Type.hs
src/Language/HKanren/Functions/: List.hs  Nat.hs
src/Language/HKanren/Types/: List.hs  Nat.hs  Pair.hs
test/: LispLists.hs  List.hs  QuickCheckHelper.hs  Unify.hs
