name:                ds-kanren
version:             0.2.0.0
synopsis:            A subset of the miniKanren language
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10
library

  exposed-modules:     Language.DSKanren
                     , Language.DSKanren.Core
                     , Language.DSKanren.Sugar
  build-depends:       base >=4 && <5, logict, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
