name:                ds-kanren
version:             0.2.0.1
synopsis:            A subset of the miniKanren language
description:
  ds-kanren is an implementation of the <http://minikanren.org miniKanren> language.

license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10
source-repository head
  type:     hg
  location: http://bitbucket.org/jozefg/ds-kanren

library
  exposed-modules:     Data.HMap
                     , Data.HOrdering
                     , Data.HUtils
                     , Language.DSKanren
                     , Language.DSKanren.Core
                     , Language.DSKanren.Sugar
  other-modules:       Language.DSKanren.Subst
  build-depends:       base >=4 && <5
                     , containers >=0.4
                     , logict
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -W -Wall
                       -fwarn-monomorphism-restriction
                       -fno-warn-type-defaults
                       -fno-warn-name-shadowing
                       -ferror-spans -rtsopts

executable           playground
  build-depends:     base >= 4.7, containers, logict, ds-kanren
  main-is:           src/Language/DSKanren/Playground.hs
  default-language:  Haskell2010
  ghc-options:       -W -Wall
                     -fwarn-monomorphism-restriction
                     -fno-warn-type-defaults
                     -fno-warn-name-shadowing
                     -ferror-spans -rtsopts
                     -main-is Language.DSKanren.Playground

test-suite test-unify
  hs-source-dirs: test
  type:               exitcode-stdio-1.0
  main-is:            Unify.hs
  hs-source-dirs:     test
  build-depends:      ds-kanren
                    , tasty
                    , tasty-quickcheck
                    , QuickCheck
                    , base >=4 && <5
  default-language:    Haskell2010

test-suite test-list
  hs-source-dirs: test
  type:               exitcode-stdio-1.0
  main-is:            List.hs
  hs-source-dirs:     test
  build-depends:      ds-kanren
                    , tasty
                    , tasty-quickcheck
                    , QuickCheck
                    , base >=4 && <5
  default-language:    Haskell2010
