name:                hkanren
version:             0.1
synopsis:            A subset of the miniKanren language
description:
  hkanren is an implementation of the <http://minikanren.org miniKanren> language.

license:             MIT
license-file:        LICENSE
author:              Danny Gratzer, Sergey Vinokuron
maintainer:          serg.foo@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/sergv/hkanren.git

library
  exposed-modules:     Data.HOrdering
                     , Data.HUtils
                     , Language.HKanren
                     , Language.HKanren.Functions.List
                     , Language.HKanren.SafeLVar
                     , Language.HKanren.Syntax
                     , Language.HKanren.Types.List
  other-modules:       Data.HMap
                     , Language.HKanren.Core
                     , Language.HKanren.LVar
                     , Language.HKanren.Type
                     , Language.HKanren.Subst
  build-depends:       base >=4 && <5
                     , containers >=0.4
                     , logict
                     , singletons
                     , wl-pprint-text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -W -Wall
                       -fwarn-monomorphism-restriction
                       -fno-warn-type-defaults
                       -fno-warn-name-shadowing
                       -ferror-spans -rtsopts
  ghc-prof-options:    -fprof-auto

-- executable           playground
--   build-depends:     base >= 4.7, containers, logict, hkanren
--   main-is:           src/Language/HKanren/Playground.hs
--   default-language:  Haskell2010
--   ghc-options:       -W -Wall
--                      -fwarn-monomorphism-restriction
--                      -fno-warn-type-defaults
--                      -fno-warn-name-shadowing
--                      -ferror-spans -rtsopts
--                      -main-is Language.HKanren.Playground
--  ghc-prof-options:  -fprof-auto

executable           singletons-playground
  build-depends:     base >= 4.7, containers, singletons
  main-is:           src/Language/HKanren/SingletonsPlayground.hs
  default-language:  Haskell2010
  ghc-options:       -W -Wall
                     -fwarn-monomorphism-restriction
                     -fno-warn-type-defaults
                     -fno-warn-name-shadowing
                     -ferror-spans -rtsopts
                     -main-is Language.HKanren.SingletonsPlayground
  ghc-prof-options:  -fprof-auto

-- test-suite test-unify
--   hs-source-dirs: test
--   type:               exitcode-stdio-1.0
--   main-is:            Unify.hs
--   hs-source-dirs:     test
--   build-depends:      hkanren
--                     , tasty
--                     , tasty-quickcheck
--                     , QuickCheck
--                     , base >=4 && <5
--   default-language:    Haskell2010

test-suite test-list
  hs-source-dirs: test
  type:               exitcode-stdio-1.0
  main-is:            List.hs
  other-modules:      LispLists
  hs-source-dirs:     test
  build-depends:      hkanren
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , QuickCheck
                    , base >=4 && <5
                    , singletons
                    , text
                    , wl-pprint-text
  default-language:   Haskell2010
  ghc-options:        -W -Wall
                      -fwarn-monomorphism-restriction
                      -fno-warn-type-defaults
                      -fno-warn-name-shadowing
                      -ferror-spans -rtsopts
  ghc-prof-options:   -fprof-auto
